fix height on mobile devices

--- a/src/components/CompScreen/compscreen.module.css
+++ b/src/components/CompScreen/compscreen.module.css
@@ -15,6 +15,7 @@ html, body {
     justify-content: space-between;
     padding: 0 2rem;
     box-sizing: border-box;
+    z-index: 1000;
 }
 
 .footername {
@@ -109,21 +110,31 @@ html, body {
 }
 
 @media screen and (max-width: 750px) {
+    .window {
+        height: 100dvh;
+    }
     .boxescontainer {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         place-items: center;
-        gap: 0;
+        gap: 5vh;
     }
 
     .boxes {
-        background-color: rgba(242, 242, 242, 0.53);
         border-radius: 10px;
         gap: 0.2rem;
         padding: 0.5rem;
         width: 6rem;
         height: 6rem;
         justify-content: center;
+    }
+     
+    .dark .boxes {
+        background-color: rgba(242, 242, 242, 0.196) ;
+    }
+
+    .light .boxes {
+        background-color: rgba(242, 242, 242, 0.53);
     }
 }
 
