--- a/src/components/Stack/gallery.module.css
+++ b/src/components/Stack/gallery.module.css
@@ -123,3 +123,15 @@
     color: white;
     font-weight: bold;
 }
+
+@media screen and (max-width: 750px) {
+    .carrousel {
+        flex-direction: column;
+    }
+
+    .arrows {
+        width: 3rem;
+        height: 3rem;
+    }
+    
+}
